stg/guestbook/guestbook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook
  namespace: stg
  labels:
    app: guestbook
spec:
  # comment or delete the following line if you want to use a LoadBalancer
  # type: NodePort
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
    name: http
  selector:
    app: guestbook
